YAML Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-deployment
  name: demo-deployment-service
spec:
  ports:
    - name: 8580-tcp
      port: 8580
      protocol: TCP
      targetPort: 8580
  selector:
    deployment: demo-deployment
