YAML Deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-deployment
  name: demo-deployment-route
spec:
  port:
    targetPort: 8580-tcp
  to:
    kind: Service
    name: demo-deployment-route
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
